deployments/prod.backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rdbw-backend
  namespace: rdbw-prod
  labels:
    app: rdbw
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rdbw-backend
      tier: backend
  template:
    metadata:
      labels:
        app: rdbw-backend
        tier: backend
    spec:
      containers:
        - name: rdbw-backend
          image: rdbw-backend:latest
          imagePullPolicy: Always
          resources:
            limits:
              cpu: "2"
              memory: "10Gi"
            requests:
              cpu: "1"
              memory: "5Gi"
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: rdbw-backend-data
              mountPath: /vol/web
      volumes:
        - name: rdbw-backend-data
          persistentVolumeClaim:
            claimName: rdbw-backend-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: rdbw-backend-cluster-service
  namespace: rdbw-prod
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8000
  selector:
    app: rdbw-backend
    tier: backend
