deployments/prod.frontend.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rdbw-frontend-ingress
  namespace: rdbw-prod
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - www.rdbw.cybersmith.io
    secretName: frontend-tls-secret
  rules:
    - host: www.rdbw.cybersmith.io
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: rdbw-cluster-service
                port:
                  number: 80
